--- a/SystemCP-g/pom.xml
+++ b/SystemCP-g/pom.xml
@@ -4,6 +4,14 @@
     <groupId>systemcp.g</groupId>
     <artifactId>SystemCP-g</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>13</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
