--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ TestResults.xml
 /CalculadoraInterativa2A/target/
 /CalculadoraInterativaCelular/target/
 /SystemCP-g/target/
+/OperadoresAritimeticos/target/
+/OperadoresSwing/target/
