--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ TestResults.xml
 /SystemCP-g/target/
 /OperadoresAritimeticos/target/
 /OperadoresSwing/target/
+/SuperCalculadora/target/
+/Operadores/target/
